<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Text Transport</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="uri">Server URI</string>
    <string name="tcp">TCP</string>
    <string name="ssl">SSL</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

</resources>